Fixed sidebar animations and scrolling
Scrollbars now show an X icon when opened (and it is visible). The
sidebar animations were also changed so that they shift onto the screen,
allowing text position in sidebar to remain the same. For desktop, the
scrolling onto different pages also highlights the tab you're currently
on instead of which one was clicked. Need to update this for mobile

--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@ body {
 
 .info-container {
 	height: 100vh;
-	width: 0;
+	width: 280px;
 	top: 0px;
-	right: 0px;
+	right: -280px;
 	position: fixed;
 	background-color: #262829;
 	z-index: 99;
@@ -36,12 +36,19 @@ body {
 }
 
 .info-content {
-	margin-top: 100px;
+	margin-top: 20vh;
 	padding: 10px;
 	text-decoration: none;
 	color: #FAFAFA;
 	display: block;
 	width: 260px;
+}
+
+#white-info {
+	width: 20px;
+	top: 27.5px;
+	right: 34.8px;
+	display: none;
 }
 
 .nav-button {
@@ -53,15 +60,22 @@ body {
 	opacity: 0.4;
 }
 
+#white-nav {
+	width: 20px;
+	top: 28.4px;
+	left: 35px;
+	display: none;
+}
+
 .nav-button:hover, .info-button:hover {
 	opacity: 0.7;
 }
 
 .nav-menu {
 	height: 100vh;
-	width: 0;
+	width: 280px;
 	top: 0px;
-	left: 0px;
+	left: -280px;
 	position: fixed;
 	background-color: #262829;
 	z-index: 99;
@@ -79,7 +93,7 @@ body {
 }
 
 .nav-menu-item:first-child {
-	margin-top: 100px;
+	margin-top: 20vh;
 }
 
 .nav-menu-item:hover {
@@ -161,6 +175,15 @@ body {
 	left: 0;
 }
 
+.section-contact {
+	width: 80%;
+	background-color: #F6D14B;
+	padding: 0;
+	margin: 0 10%;
+	top: 0;
+	left: 0;
+}
+
 #about-section {
 	padding: 5% 0;
 	margin: 0;
@@ -186,6 +209,8 @@ body {
 	text-align: center;
 	background-color: #F6D14B;
 	color: #FAFAFA;
+	padding: 5% 0;
+	margin: 0;
 }
 
 .section-title {
@@ -253,20 +278,20 @@ body {
 #hobbies-title {
 	width: 100%;
 	background-color: #E33539;
-	z-index: 10;
+	z-index: 11;
 	color: #FAFAFA;
 }
 
 #projects-title {
 	width: 100%;
 	background: #EEEEEE;
-	z-index: 20;
+	z-index: 12;
 }
 
 #contact-title {
 	width: 100%;
 	background: #F6D14B;
-	z-index: 10;
+	z-index: 13;
 	color: #FAFAFA;
 }
 
